<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">nancy_s_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_div_five">div Five</string>
<string name="msg_we_have_smth_yu">We have smth yummy for you</string>
<string name="msg_unlock_10_off">Unlock 10% off your

 first order</string>
<string name="lbl_game">Game</string>
<string name="msg_popular_categor">Popular categories</string>
<string name="msg_play_christmas">play Christmas cards &amp; win vouchers</string>
<string name="lbl_logout">Logout</string>
<string name="lbl_unlock_offer">Unlock Offer</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up</string>
<string name="lbl_email_address">Email address</string>
<string name="msg_you_can_also_si">you can also sign up with</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl_order_now2">Order Now</string>
<string name="lbl_order_now3">Order now</string>
<string name="lbl_230_calories">230 calories </string>
<string name="lbl2">&#1049259;</string>
<string name="lbl_with_our_t">with our T</string>
<string name="lbl_biryani">Biryani</string>
<string name="lbl_home">Home</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="msg_with_tea_rose_c">with Tea Rose Cream 120g</string>
<string name="lbl_add_to_cart2">add to cart</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_see_all2">See All</string>
<string name="msg_christmas_memor2">Christmas memory cards</string>
<string name="lbl_south_indian">SOUTH
INDIAN</string>
<string name="msg_you_can_also_lo">you can also login with</string>
<string name="msg_cinnabon_with">Cinnabon 
with Tea Rose Cream 120g</string>
<string name="lbl_splash">splash</string>
<string name="lbl_zalabya_semsem">Zalabya semsem </string>
<string name="msg_you_are_complet">You are completely safe.
Read our Terms &amp; Conditions.</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_hello">Hello!!</string>
<string name="lbl_booking">Booking</string>
<string name="lbl_tea_rose">Tea Rose</string>
<string name="lbl_11_home">11_Home</string>
<string name="lbl_username">Username</string>
<string name="lbl_a"> a</string>
<string name="msg_with_lavande_cr">with Lavande Cream 120g</string>
<string name="lbl_edit_profile">Edit Profile</string>
<string name="msg_sign_up_for_spe">Sign up for special offers and updates</string>
<string name="lbl_34_aw">!34#AW</string>
<string name="lbl_main_course">Main Course</string>
<string name="lbl_total_21_002">Total: $ 21.00</string>
<string name="lbl_279_99">$279.99</string>
<string name="msg_read_our_terms">Read our Terms &amp; Conditions.</string>
<string name="lbl_on_boarding_one">on boarding One</string>
<string name="lbl_your_cart">Your Cart</string>
<string name="lbl_history">History</string>
<string name="msg_with_all_the_ca">with all the cards face down you have one turn to turn over two cards, if they have matching items you will win a random voucher !</string>
<string name="msg_with_pear_and_g">with Pear and Gorgonzola Cream</string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
<string name="lbl_large_180_g">Large
180 g</string>
<string name="lbl_your_choice">Your Choice</string>
<string name="msg_amet_minim_moll">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</string>
<string name="lbl_enter_username"> Enter Username</string>
<string name="msg_christmas_memor">Christmas memory cards </string>
<string name="lbl_eastern">Eastern</string>
<string name="lbl_265_99">$265.99</string>
<string name="lbl_20_off">20% OFF</string>
<string name="msg_no_thanks_i_ll">"No, thanks I'll pay full price"</string>
<string name="lbl_lavanda">Lavanda</string>
<string name="msg_forgot_password2">Forgot Password?</string>
<string name="msg_gorgonzola_and">Gorgonzola and Pear</string>
<string name="lbl_bose_headphones">Bose Headphones</string>
<string name="lbl_staff_pick">Staff Pick</string>
<string name="lbl_small_70_g">Small
70 g</string>
<string name="lbl_6_items">6 Items</string>
<string name="lbl_burger">bURGER</string>
<string name="lbl_splash_one">splash One</string>
<string name="lbl_favorite_sweets">favorite sweets</string>
<string name="lbl_healthy">Healthy </string>
<string name="lbl_menubar">menubar</string>
<string name="lbl_delicious">Delicious</string>
<string name="lbl_34">(34)</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_password">Password</string>
<string name="msg_irina_volska_gm">irina.volska@gmail.com</string>
<string name="msg_erms_conditio">erms &amp; Conditions </string>
<string name="msg_basbousa_with_n">Basbousa with Nescafe</string>
<string name="lbl_hey_irina">Hey, Irina</string>
<string name="lbl_div_four">div Four</string>
<string name="lbl_jars">Jars</string>
<string name="lbl_main">Main</string>
<string name="lbl_ap_block">AP Block</string>
<string name="lbl_enter_password">Enter Password</string>
<string name="lbl_form">form</string>
<string name="lbl_most_selling">Most selling</string>
<string name="lbl_egp">EGP </string>
<string name="lbl_cakes">Cakes</string>
<string name="msg_stay_healthy_wh2">Stay healthy while enjoying your </string>
<string name="msg_healthy_and_del">Healthy And Delicious</string>
<string name="msg_cinnabon_with3">Cinnabon 
with Pear and Gorgonzola Cream 120g</string>
<string name="lbl_favorite">Favorite</string>
<string name="lbl_win_vouchers"> &amp; win vouchers</string>
<string name="lbl_category">Category</string>
<string name="msg_cinnabon_with2">Cinnabon 
with Lavande Cream 120g</string>
<string name="lbl_trending">Trending</string>
<string name="lbl_22">2</string>
<string name="lbl_christmas_cards">Christmas cards</string>
<string name="lbl_kolkata">Kolkata</string>
<string name="lbl_pastries2">Pastries</string>
<string name="lbl_onboarding">onboarding</string>
<string name="lbl_menu">Menu</string>
<string name="lbl_categories">Categories</string>
<string name="msg_or_continue_as">or continue as Guest</string>
<string name="lbl_recently_order">Recently order</string>
<string name="lbl_about_us">About us</string>
<string name="lbl_cinnabon">Cinnabon</string>
<string name="msg_with_pear_and_g2">with Pear and Gorgonzola Cream 120g</string>
<string name="lbl_please_sign_in">Please Sign In</string>
<string name="lbl_see_all">See all</string>
<string name="msg_you_are_complet2">You are completely safe.
</string>
<string name="lbl_contact_us">Contact us</string>
<string name="lbl_egp_150">EGP 150</string>
<string name="lbl_get_started">Get Started</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_donuts">donuts</string>
<string name="lbl_sign_up2"> Sign up</string>
<string name="lbl_sign_up3">Sign up</string>
<string name="lbl_order_now">ORDER NOW</string>
<string name="lbl_season_game">Season Game !</string>
<string name="lbl_name">Name</string>
<string name="lbl_299">299</string>
<string name="lbl_total_21_00">Total: $ 21.00 </string>
<string name="lbl_and">And </string>
<string name="lbl"> !</string>
<string name="lbl_items">Items</string>
<string name="msg_congratulations">Congratulations !</string>
<string name="msg_recently_ordere">Recently ordered</string>
<string name="msg_cinnabon_with_p">Cinnabon with Pear and Gorgonzola Cream</string>
<string name="lbl_play">play </string>
<string name="lbl_email">Email</string>
<string name="lbl_free_delivery">Free Delivery</string>
<string name="msg_nancyhany8_gmai">nancyhany8@gmail.com</string>
<string name="msg_from_thursday_s">From thursday-saturday</string>
<string name="lbl_search">Search</string>
<string name="lbl_1">1</string>
<string name="lbl_login_one">Login One</string>
<string name="lbl_add_to_cart">Add To Cart</string>
<string name="lbl_3">3</string>
<string name="msg_type_a_dish_or">Type a dish or cuisine</string>
<string name="lbl_div_three">div Three</string>
<string name="msg_you_won_a_10_v">you won a 10% voucher</string>
<string name="lbl_enjoy">Enjoy</string>
<string name="lbl_3_50">$3.50</string>
<string name="msg_by_signing_up">By signing up, you agree to receive email marketing</string>
<string name="lbl_signup_two">SignUp Two</string>
<string name="lbl_11_home_one">11_Home One</string>
<string name="lbl_pastries">pastries</string>
<string name="lbl_login">Login</string>
<string name="msg_by_registering">By registering you agree with our Terms &amp; Conditions </string>
<string name="lbl_medium_120_g">Medium
120 g</string>
<string name="lbl_div_two">div Two</string>
<string name="msg_stay_healthy_wh">Stay healthy while enjoying your favorite sweets !</string>
<string name="lbl_cart">Cart</string>
<string name="lbl_selected">Selected</string>
<string name="lbl_div_one">div One</string>
<string name="msg_by_registering2">By registering you agree </string>
<string name="lbl_all">All</string>
<string name="lbl_5_0">5.0</string>
<string name="lbl_chinese">CHINESE</string>
<string name="lbl_welcome_back">Welcome
back</string>
<string name="lbl_cart_is_empty">Cart is empty</string>
<string name="lbl_nancy_hany">Nancy Hany</string>
<string name="lbl_signup3">signUp</string>
<string name="lbl_signup2">SignUp</string>
<string name="lbl_div">div</string>
<string name="msg_enjoy_a_unique">Enjoy a unique experience</string>
<string name="lbl_399">$399</string>
<string name="lbl_10_off">10% OFF</string>
<string name="msg_hyderabadi_biry">Hyderabadi Biryani</string>
<string name="lbl_signup_one">Signup One</string>
<string name="lbl_unique">unique </string>
<string name="msg_middle_eastern">Middle Eastern desserts</string>
<string name="lbl_chef_pick">Chef Pick</string>
<string name="lbl_150">150</string>
<string name="lbl_experience">experience</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="lbl_aaaaaaaaa">aaaaaaaaa</string>
<string name="msg_heeeeeey_beeee_careful_of_the_cu">heeeeeey beeee careful of the cupcake !!!!</string>
</resources>
