<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listproductcolorbRowModel" type="com.nancysapplication.app.modules.home2.data.model.ListproductcolorbRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearVerticalProduc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylecornerRadius_2">
        <FrameLayout android:id="@+id/frameProductImage"
            android:layout_height="@dimen/_164pxv" android:layout_width="@dimen/_285pxh">
            <View android:background="@color/deep_purple_100"
                android:id="@+id/viewProductColorB"
                android:layout_gravity="start"
                android:layout_height="@dimen/_160pxv"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_285pxh"/>
            <FrameLayout android:id="@+id/frameStackrasgullarosogu"
                android:layout_gravity="start"
                android:layout_height="@dimen/_164pxv" android:layout_width="@dimen/_285pxh">
                <ImageView android:id="@+id/imageRasgullarosogu"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_164pxh"
                    android:layout_width="@dimen/_285pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_rasgullarosogu}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rasgullarosogu"/>
                <ImageButton
                    android:background="@drawable/rectangle_bg_white_a700_radius_16"
                    android:id="@+id/btnFavorite"
                    android:layout_gravity="top|end"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_32pxh"
                    android:paddingHorizontal="@dimen/_8pxh"
                    android:paddingVertical="@dimen/_8pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_favorite" tools:ignore="ContentDescription"/>
            </FrameLayout>
        </FrameLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearProductInfo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtProductName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{listproductcolorbRowModel.txtProductName}"
                style="@style/txtLatoregular20_1" tools:text="@string/msg_hyderabadi_biry"/>
            <LinearLayout android:id="@+id/linearPriceContent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRowcurrentprice"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.49"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCurrentPrice"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        android:text="@{listproductcolorbRowModel.txtCurrentPrice}"
                        style="@style/txtLatoextrabold16" tools:text="@string/lbl_299"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtOldPrice"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{listproductcolorbRowModel.txtOldPrice}"
                        style="@style/txtLatobold12" tools:text="@string/lbl_399"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn20Off"
                    android:layout_height="@dimen/_20pxv"
                    android:layout_marginStart="@dimen/_122pxh"
                    android:layout_width="@dimen/_67pxh"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_8pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_20_off"
                    android:textAllCaps="true"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_20_off"/>
            </LinearLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtTimeZone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:text="@{listproductcolorbRowModel.txtTimeZone}"
                style="@style/txtLatoregular12" tools:text="@string/msg_amet_minim_moll"/>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearExtraInfo"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16pxh"
                android:layout_marginVertical="@dimen/_16pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageStar"
                    android:layout_height="@dimen/_9pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_9pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_star"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtReviewScore"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.09"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{listproductcolorbRowModel.txtReviewScore}"
                    style="@style/txtLatobold12_1" tools:text="@string/lbl_5_0"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOfReviews"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_weight="0.11"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{listproductcolorbRowModel.txtOfReviews}"
                    style="@style/txtLatoregular12_1" tools:text="@string/lbl_34"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMainCourse"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_weight="0.35"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{listproductcolorbRowModel.txtMainCourse}"
                    style="@style/txtLatobold12_1" tools:text="@string/lbl_main_course"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnChefPick"
                    android:layout_height="@dimen/_20pxv"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_width="@dimen/_78pxh"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_8pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_chef_pick"
                    android:textAllCaps="true"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_chef_pick"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
