<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="formVM" type="com.nancysapplication.app.modules.form.data.viewmodel.FormVM"/>
    </data>
    <LinearLayout android:id="@+id/linearForm"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageDiv"
            android:layout_height="@dimen/_496pxh"
            android:layout_marginBottom="@dimen/_4pxv"
            android:layout_width="@dimen/_260pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_div_496x260}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_div_496x260"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearDiv"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_64pxv"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_weight="0.63" android:layout_width="0dp" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackoffer"
                android:layout_gravity="start"
                android:layout_height="@dimen/_155pxv" android:layout_width="@dimen/_440pxh">
                <LinearLayout android:id="@+id/linearDiv1"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtOffer"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_19pxv"
                        android:layout_marginEnd="@dimen/_13pxh"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_32pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:text="@{formVM.formModel.txtOffer}"
                        style="@style/txtLatoblackitalic48" tools:text="@string/msg_unlock_10_off"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtSignupforspe"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_70pxh"
                    android:layout_marginStart="@dimen/_70pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{formVM.formModel.txtSignupforspe}"
                    style="@style/txtLatoregular18" tools:text="@string/msg_sign_up_for_spe"/>
            </FrameLayout>
            <LinearLayout android:id="@+id/linearDiv2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_bluegray_600_radius_4"
                    android:ellipsize="end"
                    android:hint="@string/lbl_name"
                    android:id="@+id/etName" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_16pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_17pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={formVM.formModel.etNameValue}"
                    android:textColorHint="@color/gray_609"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_bluegray_600_radius_4"
                    android:ellipsize="end"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_16pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_17pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={formVM.formModel.etEmailValue}"
                    android:textColorHint="@color/gray_609"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearDiv3"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_608">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnUnlockOffer"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_unlock_offer"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_5" tools:text="@string/lbl_unlock_offer"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtBysigningup"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_54pxh"
                android:layout_marginStart="@dimen/_63pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{formVM.formModel.txtBysigningup}"
                style="@style/txtKanitregular14" tools:text="@string/msg_by_signing_up"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNoThanksIllPayFullPrice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/msg_no_thanks_i_ll"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_6" tools:text="@string/msg_no_thanks_i_ll"/>
        </LinearLayout>
    </LinearLayout>
</layout>
